# log-system-sample

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/skills/code-review-standards/: SKILL.md
.claude/skills/design-tokens/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/observability-logging/: SKILL.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  init.sh
apps/ai-mock/: Dockerfile  README.md  pyproject.toml
apps/ai-mock/src/flownote_ai_mock/: main.py
apps/ai-mock/tests/: test_mock.py
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/flownote_api/: container.py  main.py  settings.py
apps/api/src/flownote_api/application/usecases/: ai.py  notes.py  tasks.py  versions.py
apps/api/src/flownote_api/domain/: ai.py  errors.py  identity.py  kinds.py  notes.py  ports.py  tasks.py  versions.py
apps/api/src/flownote_api/infrastructure/: clock.py  ids.py
apps/api/src/flownote_api/infrastructure/ai/: openai_compatible.py  stub.py
apps/api/src/flownote_api/infrastructure/db/: memory.py  models.py  repositories.py  session.py
apps/api/src/flownote_api/infrastructure/security/: token.py
apps/api/src/flownote_api/interface/: telemetry_catalog.py
apps/api/src/flownote_api/interface/cli/: __init__.py  error_catalog.py  telemetry_catalog.py
apps/api/src/flownote_api/interface/http/: error_catalog.py  problem.py  schemas.py
apps/api/src/flownote_api/interface/http/routers/: admin.py  ai.py  health.py  notes.py  tasks.py  versions.py
apps/api/src/flownote_api/interface/middleware/: errors.py  observability.py
apps/api/src/flownote_api/interface/security/: auth.py
apps/api/src/flownote_api/shared/: __init__.py  http_constants.py  routes.py  telemetry.py
apps/api/tests/: conftest.py
apps/api/tests/application/: test_services.py
apps/api/tests/contracts/: test_repositories.py
apps/api/tests/domain/: test_domain.py  test_errors.py
apps/api/tests/http/: test_admin_log_level.py  test_endpoints.py  test_problem_details.py
apps/api/tests/observability/: test_error_catalog.py  test_http_observability.py  test_log_at_boundary.py  test_telemetry_catalog.py  test_telemetry_constants.py
apps/web/: Dockerfile  README.md  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/.storybook/: main.ts  preview.ts
apps/web/src/: auth.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/auth/[...nextauth]/: route.ts
apps/web/src/components/: Button.stories.tsx  Button.test.tsx  Button.tsx  Providers.tsx
apps/web/src/features/ai/: SearchPanel.tsx
apps/web/src/features/dashboard/: Dashboard.tsx
apps/web/src/features/notes/: NotesPanel.tsx
apps/web/src/shared/: api-client.test.ts  api-client.ts  error-catalog.generated.ts  observability.ts  routes.generated.ts  telemetry.test.ts  telemetry.ts  use-token.ts
apps/web/src/tokens/: tokens.ts
apps/web/src/types/: next-auth.d.ts
docs/: architecture.md  concept.md
docs/adr/: 0001-opentelemetry.md  0002-signoz.md  0003-persistence.md  0004-auth-keycloak.md  0005-log-transport.md  0006-service-instance-id.md  0007-mcp-agent-instrumentation.md
docs/observability/: audit-logging.md  error-catalog.md  frontend-logging.md  genai-observability.md  logging-cookbook.md  logging-spec.md  observability-architecture.md  redaction-policy.md
infra/: README.md  compose.yaml
infra/keycloak/: realm-flownote.json
infra/otel-collector/: config.yaml
