# OpenAI互換のローカルAIモックサーバ(開発用)。
# vLLM は重いため、開発時は本サーバで /v1/chat/completions 等を模擬する。
[project]
name = "flownote-ai-mock"
version = "0.1.0"
description = "OpenAI互換モックサーバ (開発用)"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flownote_ai_mock"]
