# FlowNote バックエンド (FastAPI / レイヤードアーキテクチャ)。
[project]
name = "flownote-api"
version = "0.1.0"
description = "FlowNote バックエンド API"
requires-python = ">=3.14"
dependencies = [
    "flownote-observability",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.10",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
]

[project.optional-dependencies]
# 本番/compose では PostgreSQL を使う。ローカル/テストは aiosqlite で完結する。
postgres = ["psycopg[binary]>=3.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flownote_api"]
